Address TODO comments: Add GET endpoints for orders and make item names unique (#8)
