# src/main/java/com/mictech/controller/OrderController.java
@@ -4,13 +4,15 @@ import com.mictech.api.OrdersApi;
 import com.mictech.api.model.Order;
 import com.mictech.api.model.OrderRequest;
 import com.mictech.service.OrderProcessor;
+import io.micrometer.observation.annotation.Observed;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
+
 @RestController
 public class OrderController implements OrdersApi {
-    // TODO: add list and get endpoints
 
     private final OrderProcessor orderProcessor;
 
@@ -34,5 +36,20 @@ public class OrderController implements OrdersApi {
     public ResponseEntity<Order> purchaseOrder(Long id, Boolean virtual) {
         Order purchasedOrder = orderProcessor.purchaseOrder(id, virtual);
         return ResponseEntity.ok(purchasedOrder);
+    }
+
+    @Override
+    @Observed(name = "get.orders", contextualName = "get-all-orders")
+    public ResponseEntity<List<Order>> getAllOrders() {
+        List<Order> orders = orderProcessor.getAllOrders();
+        return ResponseEntity.ok(orders);
+    }
+
+    @Override
+    @Observed(name = "get.order", contextualName = "get-order")
+    public ResponseEntity<Order> getOrderById(Long id) {
+        return orderProcessor.getOrderById(id)
+                .map(ResponseEntity::ok)
+                .orElse(new ResponseEntity<>(HttpStatus.NOT_FOUND));
     }
 }
